some minor bugfixes

--- a/src/ismn_loader.ipynb
+++ b/src/ismn_loader.ipynb
@@ -1357,8 +1357,8 @@
     "\n",
     "    # get the details\n",
     "    details = [\n",
-    "        models.DetailCreate(key=\"depth_from\", value=row.depth_from),\n",
-    "        models.DetailCreate(key=\"depth_to\", value=row.depth_to),\n",
+    "        models.DetailCreate(key=\"depth_from\", raw_value=row.depth_from),\n",
+    "        models.DetailCreate(key=\"depth_to\", raw_value=row.depth_to),\n",
     "        *get_details(statics)\n",
     "    ]\n",
     "\n",
@@ -1513,10 +1513,13 @@
     "        # parse the metadata\n",
     "        meta = get_metadata(row, variable, raw_statics=raw_statics)\n",
     "\n",
-    "        # add the met\n",
-    "        entry = core.add_entry(meta)\n",
-    "        entry_id = entry.id\n",
-    "\n",
+    "        # add the meta\n",
+    "        try:\n",
+    "            entry = core.add_entry(meta)\n",
+    "            entry_id = entry.id\n",
+    "        except Exception as e:\n",
+    "            logger.error(f\"Errored uploading {row.filename} to database: {str(e)}\")\n",
+    "            continue\n",
     "    if meta.datasource is None:\n",
     "        # parse the datasource\n",
     "        try:\n",
