adding debugger and missing fields in upload

--- a/src/ismn_loader.ipynb
+++ b/src/ismn_loader.ipynb
@@ -1461,7 +1461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1536,6 +1536,7 @@
     "                citation=meta['citation'],\n",
     "                variable=meta['variable'],\n",
     "                details=meta['details'],\n",
+    "                location=meta.get('location'),\n",
     "                datasource=datasource,\n",
     "                duplicate_authors=False\n",
     "            )\n",
